--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,7 +42,7 @@ footer {
   margin-bottom: 20px;
 }
 .item .panel-body {
-  height: 70px;
+  height: 120px;
 }
 .item .panel-heading {
   height: 250px;
@@ -57,7 +57,10 @@ p.item-title {
   -webkit-line-clamp: 2;
   overflow: hidden;
 }
-
+.item .buttons form {
+   display: inline-block;
+   margin: 0 5px;
+}
   
 
 
