--- a/app/views/items/_items.html.erb
+++ b/app/views/items/_items.html.erb
@@ -1,4 +1,4 @@
-<% if items %>
+<% if items.present? %>
   <div class="row">
 <% items.each do |item| %>
     <div class="item">
@@ -10,9 +10,20 @@
 " alt="" >
           </div>
           <div class="panel-body">
+<% if item.persisted? %>
+            <p class="item-title">
+<%= link_to item.name, item %>
+</p>
+<% else %>
             <p class="item-title">
 <%= item.name %>
 </p>
+<% end %>
+          <div class="buttons text-center">
+<% if logged_in? %>
+<%= render 'ownerships/want_button', item: item %>
+<% end %>
+          </div>
           </div>
         </div>
       </div>
