--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -13,6 +13,7 @@
 </p>
         <div class="buttons text-center">
 <%= render 'ownerships/want_button', item: @item %>
+<%= render 'ownerships/have_button', item: @item %>
         </div>
        </div>
       </div>
@@ -26,7 +27,7 @@
          Wantしたユーザ
         </div>
         <div class="panel-body">
-<%= @want_users.each do |user| %>
+<% @want_users.each do |user| %>
 <%= link_to user.name, user_path(user) %>
 <% end %>
         </div>
@@ -38,6 +39,9 @@
          Haveしたユーザ
          </div>
          <div class="panel-body">
+<% @have_users.each do |user| %>
+<%= link_to user.name, user_path(user) %>
+<% end %>
          </div>
         </div>
       </div>
