--- a/app/views/rankings/have.html.erb
+++ b/app/views/rankings/have.html.erb
@@ -1,4 +1,4 @@
-<h1>Wantランキング</h1>
+<h1>Haveランキング</h1>
 <% if @items.present? %>
     <div class="row">
 <% @items.each_with_index do |item, index| %>
@@ -27,7 +27,7 @@
 <%= index+1 %>
 位
 <%= @ranking_counts[item.id] %>
-Wants</p>
+Haves</p>
 　　　　　</div>
 　　　　</div>
 　　　 </div>
