--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -29,7 +29,10 @@
  <li>
 <%= link_to 'Wantランキング', rankings_want_path %>
 </li>
-        </ul>
+<li>
+<%= link_to 'Haveランキング', rankings_have_path %>
+</li>
+      </ul>
  </li>
      <li class="dropdown">
        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role=button" aria-haspopup="true" aria-expanded="false">
