--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
  <nav class="navbar navbar-default navbar-static-top">
   <div class="container">
    <div class="navbar-header">
-   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapsed-1" aria-expanded="false">
+   <button type="button" class="navbar-toggle collapsed" data-toggle="collapsed" data-target="#bs-example-navbar-collapsed-1" aria-expanded="false">
     <span class="sr-only">Toggle navigation</span>
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
@@ -18,8 +18,7 @@
          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
          アイテムを追加
        <% end %>
-     </li>
-     <li class="dropdown">
+<li class="dropdown">
        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
      <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
      ランキング
@@ -33,7 +32,8 @@
 <%= link_to 'Haveランキング', rankings_have_path %>
 </li>
       </ul>
- </li>
+</li>
+     </li>
      <li class="dropdown">
        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role=button" aria-haspopup="true" aria-expanded="false">
        <span class="gravatar">
@@ -43,10 +43,8 @@
         <span class="caret"></span>
       </a>
       <ul class="dropdown-menu">
-      　<li>
-<%= link_to 'マイページ', user_path(current_user) %>
-        </li>
-        <li role="separator" class="divider"></li>
+      <li><%= link_to 'マイページ', user_path(current_user) %>
+        </li><li role="separator" class="divider"></li>
         <li>
           <%= link_to 'ログアウト', logout_path, method: :delete %>
         </li>
