--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-xs-offset-3 col-xs-6">
+    <div class="panel panel-default">
     <div class="panel-heading">会員登録</div>
     <div class="panel-body">
       <%= form_for(@user) do |f| %>
