--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,7 +22,7 @@
         </div>
         <div class="text-right">
           <%= f.submit '登録する', class: 'btn btn-success' %>
-        <div>
+        </div>
       <% end %>
     </div>
   </div>
